2005-04-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_append_to_buf),
	(gnet_conn_http_reset), (gnet_conn_http_new),
	(gnet_conn_http_steal_buffer):
	  Fix major memory leak in _steal_buffer(); avoid
	  making an unnecessary copy in _steal_buffer(): 
	  always allocate one more byte than required, so we
	  always have space for a terminating NUL.
	
	* tests/conn_http_test.c: (test_simple_get):
	  Add missing g_free(buf) so we can use the test
	  to check for memory leaks.

2005-03-10  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac
	  Set to 2.0.8
	  
	* NEWS:
	* src/gnet.c: (gnet_init):
	  Return if gnet_init() has been called before,
	  making sure that gnet_init() can safely be called
	  multiple times. This is useful for example for
	  libraries depending on GNet that want to call
	  gnet_init() from their own init function instead
	  of depending on it being called from the application.

2005-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	  Update for 2.0.7

2005-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* RELEASE:
	  Before release, check whether the created tarball 
	  really contains the HTML docs.

	* doc/Makefile.am:
	  Fix 'make distcheck' which the previous commit broke
	  (version.xml needs to be copied to built dir apparently)
	  
	* gnet.def:
	  Make DllMain a stdcall (use DllMain@12) to keep GNU ld
	  and gcc from complaining on win32 (patch by Gisle Vanem).

2005-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* doc/.cvsignore:
	* doc/Makefile.am:
	* doc/README:
	* doc/gnet-docs.sgml:
	* doc/version.xml.in:
	  Put the version number into the API reference manual
	  banner; update doc README and remove outdated docs 
	  build instructions.

2005-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* RELEASE:
	  Added some notes on which win32 files need to be changed
	  when new source files and/or new symbols are added.